test/testdata/while/continue_inside_nested_anonymous_function_error.lox
while (true) {
  fun() {
    continue; // error: 'continue' can only be used inside a loop
  }();
  break;
}
